# MemOS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MemoryGraph.jsx  README.md  evaluation.md  example-conversation.md  generate_eval_artifacts.py  pyproject.toml  requirements.txt
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  styles.css
dashboard/src/components/: DecayCurve.jsx  MemoryGraph.jsx  NodeDetail.jsx
dashboard/src/hooks/: useSSE.js
evaluation/: decay_projection.csv  retrieval_examples.json
memos/: __init__.py
memos/api/: __init__.py  main.py  routes.py  schemas.py
memos/core/: __init__.py  decay.py  extractor.py  models.py  scorer.py  store.py
memos/retrieval/: graph_query.py  injector.py  vector_query.py
tests/: test_decay.py  test_extractor.py  test_retrieval.py
