[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memos-ai"
version = "0.1.0"
description = "Local-first operating memory for LLM applications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "apscheduler>=3.10.4",
  "pydantic>=2.7.0",
  "networkx>=3.3",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
llm = [
  "anthropic>=0.51.0",
]
vector = [
  "chromadb>=0.5.4",
  "sentence-transformers>=3.0.1",
]
dev = [
  "pytest>=8.3.1",
]

[tool.setuptools.packages.find]
include = ["memos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
