[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memos-ai"
version = "0.1.0"
description = "Local-first operating memory for LLM applications."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ajith Raj", email = "ajithrxj@gmail.com"}
]
keywords = ["llm", "memory", "rag", "ai", "graph", "forgetting", "local-first", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.7.0",
    "networkx>=3.3",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.51.0",
]
vector = [
    "chromadb>=0.5.4",
    "sentence-transformers>=3.0.1",
]
all = [
    "anthropic>=0.51.0",
    "chromadb>=0.5.4",
    "sentence-transformers>=3.0.1",
]
dev = [
    "pytest>=8.3.1",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/ajithhraj/MemOS"
Repository = "https://github.com/ajithhraj/MemOS"
"Bug Tracker" = "https://github.com/ajithhraj/MemOS/issues"

[tool.setuptools.packages.find]
include = ["memos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
